--- a/package.json
+++ b/package.json
@@ -59,7 +59,9 @@
     "gulp-sass": "^2.3.2",
     "gulp-sass-lint": "^1.2.0",
     "gulp-sourcemaps": "^1.6.0",
+    "gulp-svg-sprite": "^1.5.0",
     "gulp-svg2png": "^2.0.0",
+    "gulp-svgmin": "^2.1.0",
     "gulp-svgstore": "^6.0.0",
     "gulp-uglify": "^2.0.0",
     "run-sequence": "^1.2.2",
