--- a/package.json
+++ b/package.json
@@ -24,26 +24,16 @@
     "url": "https://github.com/nisshin-printing/hanamaru-lp/issues"
   },
   "homepage": "https://github.com/nisshin-printing/hanamaru-lp#readme",
-  "browserify-shim": {
-    "jquery": "global:jQuery"
-  },
   "devDependencies": {
-    "babel-cli": "^6.14.0",
-    "babel-preset-es2015": "^6.14.0",
-    "babelify": "^7.3.0",
-    "bower": "^1.7.9",
+    "@babel/core": "^7.2.2",
+    "@babel/preset-env": "^7.2.0",
+    "babel-loader": "^8.0.4",
     "browser-sync": "^2.14.3",
-    "browserify": "^13.1.0",
-    "browserify-shim": "^3.8.12",
-    "debowerify": "^1.5.0",
     "del": "^2.2.2",
-    "es6-promise": "^3.3.1",
-    "eslint": "^3.5.0",
     "foundation-sites": "^6.2.3",
     "graceful-fs": "^4.1.6",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.1",
-    "gulp-babel": "^6.1.2",
     "gulp-cheerio": "^0.6.2",
     "gulp-concat": "^2.6.0",
     "gulp-cssmin": "^0.1.7",
@@ -53,20 +43,31 @@
     "gulp-htmlmin": "^3.0.0",
     "gulp-imagemin": "^3.0.3",
     "gulp-load-plugins": "^1.2.4",
+    "gulp-newer": "^1.4.0",
     "gulp-notify": "^2.2.0",
     "gulp-plumber": "^1.1.0",
     "gulp-rename": "^1.2.2",
-    "gulp-sass": "^2.3.2",
+    "gulp-sass": "^4.0.2",
     "gulp-sass-lint": "^1.2.0",
     "gulp-sourcemaps": "^1.6.0",
     "gulp-svg-sprite": "^1.5.0",
     "gulp-svg2png": "^2.0.0",
     "gulp-svgmin": "^2.1.0",
     "gulp-svgstore": "^6.0.0",
-    "gulp-uglify": "^2.0.0",
+    "gulp-util": "^3.0.8",
+    "js": "^0.1.0",
+    "lodash": "^4.17.11",
+    "lodash-webpack-plugin": "^0.11.5",
+    "node-notifier": "^5.3.0",
+    "path": "^0.12.7",
     "run-sequence": "^1.2.2",
+    "uglifyjs-webpack-plugin": "^2.0.1",
     "vinyl-buffer": "^1.0.0",
+    "vinyl-named": "^1.1.0",
     "vinyl-source-stream": "^1.1.0",
-    "watchify": "^3.7.0"
+    "watchify": "^3.7.0",
+    "webpack": "^4.28.0",
+    "webpack-cli": "^3.1.2",
+    "webpack-stream": "^5.2.1"
   }
 }
